# NeuralSystemsBCI2000

./: .gitignore  README.md  hia4emrj.sbd.txt  ns3o1wl4.jry.txt
src/contrib/: BCI2000_All.bpg  BCI2000_Contrib.bpg  CMakeLists.txt
src/contrib/AppConnectorApplications/: CMakeLists.txt  readudp.m
src/contrib/AppConnectorApplications/AppConnectorExample/: AppConnectorExample.pro  CMakeLists.txt  Makefile.Release  README
src/contrib/AppConnectorApplications/ParallelSwitch/: CMakeLists.txt  Makefile  ParallelSwitch.cpp
src/contrib/AppConnectorApplications/SimpleExample/: CMakeLists.txt  Makefile  SimpleExample.cpp
src/contrib/Application/: CMakeLists.txt
src/contrib/Application/B2B/: B2B.cpp  B2B.h  CMakeLists.txt  DFBuildScene.h  FeedbackScene3D.cpp  FeedbackScene3D.h  GradientEllipticShape.cpp  GradientEllipticShape.h
src/contrib/Application/Brain2Brain/: B2B.cpp  B2B.h  Brain2Brain.cpp  Brain2Brain.h  Brain2BrainUI.cpp  Brain2BrainUI.h  CMakeLists.txt  DFBuildScene.h  DFBuildScene2D.cpp  DFBuildScene2D.h  GradientEllipticShape.cpp  GradientEllipticShape.h  mongoose.c
src/contrib/Application/DataGlove5DTU/: DataGlove5DTUFilter.cpp  DataGlove5DTUFilter.h  readme.txt
src/contrib/Application/MFCdemo/: CMakeLists.txt  MFCdemo.h  MFCdemo.vcproj  MFCdemoDlg.cpp  MFCdemoDlg.h  ReadMe.txt  StdAfx.cpp  StdAfx.h  TaskFilter.cpp  TaskFilter.h  WINMAIN.CPP  resource.h
src/contrib/Application/MicRecorder/: MicRecorder.cpp  MicRecorder.h  MicRecorderFilter.cpp  MicRecorderFilter.h  readme.txt
src/contrib/Application/SSVEP/: CMakeLists.txt  RadialArrow.cpp  RadialArrow.h  SSVEP.cpp  SSVEP.h  SSVEPUI.cpp  SSVEPUI.h
src/contrib/Application/SimulBCI/: CMakeLists.txt  CursorTask.bpr  DFTask_EEGparameters.prm  SimulBCITask.cpp  SimulBCITask.h
src/contrib/Application/SlowWaveApp/: SWApp.bpr  SWApp.cpp  SWSpeller.bpr  SWSpeller.cpp  Task.cpp  Task.h
src/contrib/Application/Speller/: Speller.bpr  Speller.cpp  Task.cpp  Task.h  UCursor.cpp  UCursor.h  UDictionary.cpp  UDictionary.h  UStatusBar.cpp  UStatusBar.h  UTarget.cpp  UTarget.h  UTargetSequence.cpp  UTargetSequence.h  UTree.cpp  UTree.h  UTrialSequence.cpp  UTrialSequence.h  UserDisplay.cpp  UserDisplay.h  install.cmd
src/contrib/BCPy2000/: BuildDemo.bat  CMakeLists.txt  InstallFramework.bat
src/contrib/BCPy2000/foundation/: CMakeLists.txt
src/contrib/BCPy2000/framework/: BCPy2000_postinstall.py  post_install.py  setup.py
src/contrib/Extensions/: CMakeLists.txt  Extensions.cmake  GetConfigOpts.bat
src/contrib/Extensions/AudioExtension/: AudioExtension.cpp  AudioExtension.h  IncludeExtension.cmake
src/contrib/Extensions/CyberGloveLogger/: CyberGloveLogger.cpp  CyberGloveLogger.h  IncludeExtension.cmake
src/contrib/Extensions/DataGloveLogger/: 5DTDataGloveUltraLogger.cpp  5DTDataGloveUltraLogger.h  IncludeExtension.cmake  readme.txt
src/contrib/Extensions/EyetrackerLogger/: EyetrackerLogger.cpp  EyetrackerLogger.h  EyetrackerLogger.rtf  IncludeExtension.cmake
src/contrib/Extensions/GazeMonitorFilter/: GazeMonitorFilter.cpp  GazeMonitorFilter.h  IncludeExtension.cmake
src/contrib/Extensions/StimBoxFilter/: IncludeExtension.cmake  StimBoxFilter.cpp  StimBoxFilter.h
src/contrib/Extensions/WebcamLogger/: IncludeExtension.cmake  WebcamLogger.cpp  WebcamLogger.h
src/contrib/Extensions/WiimoteLogger/: CMakeLists.txt  IncludeExtension.cmake  MSAutoConnectWiimote.cpp  WiimoteLogger.cpp  WiimoteLogger.h
src/contrib/ExternalLinks/: CMakeLists.txt
src/contrib/ExternalLinks/BCI2000Automation/: BCI2000Automation.cpp  BCI2000Automation.h  BCI2000Automation.idl  BCI2000Automation.rc  BCI2000Automation.tlb  BCI2000Automation_i.c  CBCI2000Remote.cpp  CBCI2000Remote.h  CMakeLists.txt  InstallAutomation.cmd  Resource.h
src/contrib/ExternalLinks/BCI2000Command/: BCI2000Command.cpp  CMakeLists.txt
src/contrib/ExternalLinks/BCI2000PresentationLink/: BCI2000ActiveDataPort.cpp  BCI2000ActiveDataPort.h  BCI2000Controller.cpp  BCI2000Controller.h  BCI2000ControllerType.cpp  BCI2000ControllerType.h  BCI2000DataPort.cpp  BCI2000DataPort.h  BCI2000DataPortExtension.cpp  BCI2000DataPortExtension.h  BCI2000PCLLibrary.cpp  BCI2000PCLLibrary.h  BCI2000PresentationLink.aps  BCI2000PresentationLink.cpp  BCI2000PresentationLink.idl  BCI2000PresentationLink.rc  BCI2000PresentationLink.tlb  BCI2000PresentationLink_i.c  BCI2000PresentationLink_i.h  CMakeLists.txt  InstallPresentationLink.cmd  Resource.h  RunMIDL.cmd  Utils.cpp  Utils.h
src/contrib/ExternalLinks/BCI2000PythonBindings/: BCI2000Remote.py  CMakeLists.txt
src/contrib/ExternalLinks/PyffApplication/: CMakeLists.txt  PyffApplication.cpp  PyffFilter.cpp  PyffFilter.h
src/contrib/OperatorLibApplications/: CMakeLists.txt
src/contrib/OperatorLibApplications/OperatorLibDemo/: CMakeLists.txt  main.cpp
src/contrib/SignalProcessing/: CMakeLists.txt
src/contrib/SignalProcessing/Coherence/: CMakeLists.txt  CoherenceFilter.cpp  CoherenceFilter.h  CoherenceSignalProcessing.cpp  PipeDefinition.cpp  verify_coherence.m
src/contrib/SignalProcessing/CoherenceFFT/: CMakeLists.txt  CoherenceFFTFilter.cpp  CoherenceFFTFilter.h  CoherenceFFTSignalProcessing.cpp  PipeDefinition.cpp
src/contrib/SignalSource/: CMakeLists.txt
src/core/: CMakeLists.txt
src/core/Application/: CMakeLists.txt
src/core/Operator/: CMakeLists.txt  DisplayFilter.cpp  DisplayFilter.h  ParamDisplay.cpp  ParamDisplay.h  ParsedComment.cpp  ParsedComment.h  UConnectionInfo.cpp  UConnectionInfo.dfm  UConnectionInfo.h  UEditMatrix.cpp  UEditMatrix.dfm  UEditMatrix.h  UMain.cpp  UMain.dfm  UMain.h  UOperatorCfg.cpp  UOperatorCfg.dfm  UOperatorCfg.h  UOperatorCfgMatrix.h  UOperatorUtils.cpp  UOperatorUtils.h  UPreferences.cpp  UPreferences.h  UScript.cpp  UScript.h  UShowParameters.cpp  UShowParameters.h  UShowStates.cpp  UShowStates.h  USysLog.cpp  USysLog.h  USysStatus.cpp  USysStatus.h  VisDisplay.cpp  VisDisplay.h  WinMessageHook.cpp  WinMessageHook.h  operat.bpr  operat.cpp  (+5 more)
src/core/SignalProcessing/: CMakeLists.txt
src/core/SignalSource/: CMakeLists.txt
src/core/Tools/: CMakeLists.txt
(+4115 files in other folders)
