###########################################################################
## $Id$
## Authors: juergen.mellinger@uni-tuebingen.de
## Description: Build information for AppConnectorApplications

ADD_SUBDIRECTORY( AppConnectorExample )
ADD_SUBDIRECTORY( ParallelSwitch )
ADD_SUBDIRECTORY( SimpleExample )
