###########################################################################
## $Id$
## Authors: juergen.mellinger@uni-tuebingen.de
## Description: Build information for AppConnectorApplications

# Set this directory name
SET( DIR_NAME "${DIR_NAME}AppConnectorApplications/" )

ADD_SUBDIRECTORY( AppConnectorExample )
ADD_SUBDIRECTORY( ParallelSwitch )
ADD_SUBDIRECTORY( SimpleExample )
