###########################################################################
## $Id: CMakeLists.txt 3253 2011-05-05 23:37:16Z jhill $
## Authors: griffin.milsap@gmail.com
## Description: Build information for BCI2000 and CMake

# Set this directory name
SET( DIR_NAME "${DIR_NAME}Extensions/" )

ADD_SUBDIRECTORY( WiimoteLogger )