###########################################################################
## $Id$
## Authors: griffin.milsap@gmail.com
## Description: Build information for BCI2000 and CMake

# Recurse down into all project subdirectories
ADD_SUBDIRECTORY( BCI2000Automation )
ADD_SUBDIRECTORY( BCI2000PresentationLink )
