###########################################################################
## $Id: CMakeLists.txt 2938 2010-09-03 14:51:22Z mellinger $
## Authors: griffin.milsap@gmail.com
## Description: Build information for BCI2000 and CMake

# Recurse down into all project subdirectories
ADD_SUBDIRECTORY( OperatorLibDemo )
