###########################################################################
## $Id$
## Authors: juergen.mellinger@uni-tuebingen.de
## Description: Build information for BCI2000 and CMake

# Recurse down into all project subdirectories
ADD_SUBDIRECTORY( FieldTripBuffer )
ADD_SUBDIRECTORY( FIR )
ADD_SUBDIRECTORY( PeakDetector )
ADD_SUBDIRECTORY( SW )
