###########################################################################
## $Id$
## Authors: griffin.milsap@gmail.com
## Description: Build information for BCI2000 and CMake

# Recurse down into all project subdirectories
ADD_SUBDIRECTORY( SignalGenerator )
ADD_SUBDIRECTORY( g.USBamp )
ADD_SUBDIRECTORY( g.MOBIlab )
ADD_SUBDIRECTORY( g.MOBIlabPlus )
